--- a/DirectoryCleanerService/JSL/jsl64.ini
+++ b/DirectoryCleanerService/JSL/jsl64.ini
@@ -44,7 +44,7 @@ stringbuffer = 16000
 ;service start type
 ;auto demand disabled	
 ;default is auto
-starttype=auto
+starttype=demand
 
 ;Allow interaction with desktop
 ;This is a service configuration flag; default is false
@@ -302,7 +302,7 @@ wrkdir=.
 ;Everything separated by whitespace on a java command line is broken down into a parameter here. 
 ;You don't need to care about quotes
 ;around strings containing spaces here. e.g. 
-cmdline = cpds9.uf2.DirectoryCleanerService
+cmdline = -cp "C:\Users\perer\OneDrive\Documents\GitHub\cipds9.uf2\DirectoryCleanerService\bin" cipds9.uf2.DirectoryCleanerService
 
 
 ;OBSOLETE but supported alternative for passing parameters. 
